--- a/templates/index.html
+++ b/templates/index.html
@@ -34,6 +34,7 @@
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#skill">Skills</a></li>
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#experience">Experience</a></li>
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#projects">Projects</a></li>
+                <li class="nav-item"><a class="nav-link smooth-scroll" href="#personal">Personal</a></li>
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#contact">Contact</a></li>
               </ul>
             </div>
@@ -126,6 +127,7 @@
                 <li>{{ item }}</li>
                 {% endfor %}
               </ul>
+            <p> <b>Key Achievement(s): </b> {{ exp['key_achievements'] }}</p>
           </div>
         </div>
       </div>
