Add more tomls, work experience and education

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1264,7 +1264,7 @@
     color: #FFFFFF;
     box-shadow: none; }
   .btn-primary:hover {
-    box-shadow: 0 3px 8px 0 rgba(0, 0, 0, 0.17); }
+    box-shadow: 0 3px 8px 3px rgba(0, 0, 0, 0.17); }
   .btn-primary.disabled, .btn-primary.disabled:hover, .btn-primary.disabled:focus, .btn-primary.disabled.focus, .btn-primary.disabled:active, .btn-primary.disabled.active, .btn-primary:disabled, .btn-primary:disabled:hover, .btn-primary:disabled:focus, .btn-primary:disabled.focus, .btn-primary:disabled:active, .btn-primary:disabled.active, .btn-primary[disabled], .btn-primary[disabled]:hover, .btn-primary[disabled]:focus, .btn-primary[disabled].focus, .btn-primary[disabled]:active, .btn-primary[disabled].active,
   fieldset[disabled] .btn-primary,
   fieldset[disabled] .btn-primary:hover,
