--- a/static/css/main.css
+++ b/static/css/main.css
@@ -2231,7 +2231,7 @@ h3, .h3 {
 h4, .h4 {
   font-size: 1.714em;
   line-height: 1.45em;
-  margin-top: 30px;
+  margin-top: 20px;
   margin-bottom: 15px; }
   h4 + .category,
   h4.title + .category, .h4 + .category,
@@ -3434,7 +3434,7 @@ Created using IcoMoon - icomoon.io
 .carousel .now-ui-icons {
   font-size: 2em; }
 
-.card {
+.card {c
   border: 0;
   border-radius: 0.1875rem;
   display: inline-block;
@@ -3771,7 +3771,7 @@ Created using IcoMoon - icomoon.io
   text-decoration: none; }
 
 .section {
-  padding: 70px 0;
+  padding: 20px 0;
   position: relative;
   background: #FFFFFF; }
   .section .row + .category {
@@ -5283,4 +5283,5 @@ a.credit {
 
 /* Common Style */
 .section {
-  padding-bottom: 0; }
+  padding-bottom: 0;
+   margin-bottom:0px;}
