--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,54 +1,6 @@
-<!DOCTYPE html>
-<html lang="en-US">
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{{ about['name'] }}</title>
+{% extends "layout.html" %}
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet">
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/static/css/font-awesome.min.css" rel="stylesheet">
-    <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='css/aos.css') }}">
-    <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='css/bootstrap.min.css') }}">
-    <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='css/main.css') }}">
-    <link rel= "icon" type= "image/x-icon" href="{{ url_for('static', filename='images/favicon.ico') }}">
-
-    <noscript>
-      <style type="text/css">
-        [data-aos] {
-            opacity: 1 !important;
-            transform: translate(0) scale(1) !important;
-        }
-      </style>
-    </noscript>
-  </head>
-
-  <body id="top">
-
-    <header>
-      <div class="profile-page sidebar-collapse">
-        <nav class="navbar navbar-expand-lg fixed-top bg-primary">
-          <div class="container">
-              <button class="navbar-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-bar bar1"></span>
-                <span class="navbar-toggler-bar bar2"></span>
-                <span class="navbar-toggler-bar bar3"></span>
-              </button>
-          </div>
-          <div class="collapse navbar-collapse justify-content-end" id="navigation">
-            <ul class="navbar-nav" >
-              <li class="nav-item"><a class="nav-link smooth-scroll" href="#about">About</a></li>
-              <li class="nav-item"><a class="nav-link smooth-scroll" href="#skill">Skills</a></li>
-              <li class="nav-item"><a class="nav-link smooth-scroll" href="#experience">Experience</a></li>
-              <li class="nav-item"><a class="nav-link smooth-scroll" href="#projects">Projects</a></li>
-              <li class="nav-item"><a class="nav-link smooth-scroll" href="#personal">Personal</a></li>
-              <li class="nav-item"><a class="nav-link smooth-scroll" href="#contact">Contact</a></li>
-            </ul>
-          </div>
-        </nav>
-      </div>
-    </header>
+{% block content %}
 
     <div class="profile-page">
       <div class="wrapper">
@@ -115,33 +67,34 @@
     <div class="section" id="skill">
       <div class="container">
         <div class="h3 text-center mb-4 title">Professional Skills</div>
+
         <div class="card" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
-          <div class="card-title h5 text-center m-4 title">Programming and Data Wrangling</div>
-          <div class="card-body h4 px-5">
-            {{ programming_skills }} <br><br>
+          <div class="card-title h5 text-center mx-3 mt-4 title">Product and Project Management</div>
+          <div class="card-body h5 px-5 py-0 my-0">
+            {{ ", ".join(skills['product_project']) }}
           </div>
         </div>
-        <div class="card" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
-          <div class="card-body">
-            <b>Programming:</b> {{ programming_skills }} <br><br>
-            <b>Engineering:</b> {{ engineering_skills}}<br><br>
-            <b>Other:</b> {{ other_skills }}<br><br>
+
+        <div class="card p-1" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
+          <div class="card-title h5 text-center mx-3 mt-4 title">Programming and Data</div>
+          <div class="card-body h5 px-5 py-0 my-0">
+            {{ ", ".join(skills['programming']) }}
           </div>
         </div>
+
         <div class="card" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
-          <div class="card-body">
-            <b>Programming:</b> {{ programming_skills }} <br><br>
-            <b>Engineering:</b> {{ engineering_skills}}<br><br>
-            <b>Other:</b> {{ other_skills }}<br><br>
+          <div class="card-title h5 text-center m-4 title">Engineering</div>
+          <div class="card-body h5 px-5 py-0 my-0">
+            {{ ", ".join(skills['engineering']) }}
           </div>
         </div>
-      </div>
+
     </div>
 
     <div class="section" id="experience">
       <div class="container cc-experience">
         <div class="h4 text-center mb-4 title">Work Experience</div>
-        {% for exp in experience %}
+        {% for exp in experience[:5] %}
         <div class="card">
           <div class="row">
             <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
@@ -279,24 +232,9 @@
           </div>
         </div>
       </div>
-    </div></div></div>
-
-
-    <footer class="footer">
-      <div class="container text-center"><a class="cc-instagram btn btn-link" target="_blank" href={{linked_in}}><i class="fa fa-linkedin fa-2x " aria-hidden="true"></i></a></div>
-      <div class="h4 title text-center">{{ name }}</div>
-      <div class="text-center text-muted">
-        <p>&copy; Creative CV. All rights reserved.<br>Design - <a class="credit" href="https://templateflip.com" target="_blank">TemplateFlip</a></p>
-      </div>
-    </footer>
-
-    <script src="{{ url_for('static',filename='js/core/jquery.3.2.1.min.js') }}"></script>
-    <script src="{{ url_for('static',filename='js/core/popper.min.js') }}"></script>
-    <script src="{{ url_for('static',filename='js/core/bootstrap.min.js') }}"></script>
-    <script src="{{ url_for('static',filename='js/now-ui-kit.js') }}"></script>
-    <script src="{{ url_for('static',filename='js/aos.js') }}"></script>
-    <script src="{{ url_for('static',filename='js/main.js') }}"></script>
-
     </div>
-  </body>
-</html>
+      </div>
+    </div>
+    </div>
+
+{% endblock %}
