--- a/static/css/main.css
+++ b/static/css/main.css
@@ -3434,7 +3434,7 @@ Created using IcoMoon - icomoon.io
 .carousel .now-ui-icons {
   font-size: 2em; }
 
-.card {c
+.card {
   border: 0;
   border-radius: 0.1875rem;
   display: inline-block;
@@ -3442,7 +3442,10 @@ Created using IcoMoon - icomoon.io
   overflow: hidden;
   width: 100%;
   margin-bottom: 20px;
-  box-shadow: 0px 5px 25px 0px rgba(0, 0, 0, 0.2); }
+  box-shadow: 0px 5px 25px 0px rgba(0, 0, 0, 0.2);
+  }
+
+
   .card .card-body {
     min-height: 190px; }
   .card[data-background-color="orange"] {
@@ -5219,7 +5222,8 @@ Created using IcoMoon - icomoon.io
   padding-top: 60px;
   padding-right: 0;
   text-align: center;
-  color: #fff; }
+  color: #fff;
+  text-transform: uppercase;}
 
 /* References Style */
 .cc-reference .card {
