--- a/templates/layout.html
+++ b/templates/layout.html
@@ -44,13 +44,10 @@
             <div class="collapse navbar-collapse justify-content-end" id="navigation">
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link smooth-scroll" href="/">Home</a></li>
-                    <li class="nav-item"><a class="nav-link smooth-scroll" href="#about">About</a></li>
-                    <li class="nav-item"><a class="nav-link smooth-scroll" href="#skill">Skills</a></li>
-                    <li class="nav-item"><a class="nav-link smooth-scroll" href="#experience">Experience</a></li>
-                    <li class="nav-item"><a class="nav-link smooth-scroll" href="{{ url_for('projects') }}">Projects</a>
-                    </li>
-                    <li class="nav-item"><a class="nav-link smooth-scroll" href="{{ url_for('personal') }}">Personal</a>
-                    </li>
+                    <li class="nav-item"><a class="nav-link smooth-scroll" href="/#about">About</a></li>
+                    <li class="nav-item"><a class="nav-link smooth-scroll" href="/#skill">Skills</a></li>
+                    <li class="nav-item"><a class="nav-link smooth-scroll" href="/#experience">Experience</a></li>
+                    <li class="nav-item"><a class="nav-link smooth-scroll" href="{{ url_for('projects') }}">Projects</a></li>
                     <li class="nav-item"><a class="nav-link smooth-scroll" href="#contact">Contact</a></li>
                 </ul>
             </div>
